# Gcompiler

./: CMakeLists.txt  Grafo.g4  Grafo.interp  GrafoBaseVisitor.cpp  GrafoBaseVisitor.h  GrafoDriver.h  GrafoLexer.cpp  GrafoLexer.h  GrafoLexer.interp  GrafoLexer.tokens  GrafoParser.cpp  GrafoParser.h  GrafoVisitor.cpp  GrafoVisitor.h  README.md  TrieModule.ll  TrieModule2.ll  build.sh  ejemplo.txt  input.txt  input2.txt  main.cpp  main.py  test  trie2.h
.antlr/: Grafo.interp  GrafoLexer.interp  GrafoLexer.java  GrafoLexer.tokens  GrafoParser.java
GrafoInit/: Grafo.g4  ejemplo1.txt  ejemplo2.txt  ejemplo3.txt  grafo.py  instrucciones.txt  main.py  nodo.py  settings.py  visitorCompiler.py
GrafoInit/libs/: Grafo.interp  Grafo.tokens  GrafoLexer.interp  GrafoLexer.py  GrafoParser.py  GrafoVisitor.py
GrafoInit/output/: grafo  grafoRed  instrucciones.txt
docker_init/: .bashrc  Dockerfile
